--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
   "main": "index.js",
   "author": "Park Sang Jin & Jang Hee Joo",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "helmet": "^3.23.1",
+    "mongoose": "^5.9.24",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
   }
 }
