--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@babel/preset-env": "^7.10.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "helmet": "^3.23.1",
-    "mongoose": "^5.9.24",
+    "knex": "^0.21.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.3"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js --delay 2"
