--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.9.0",
     "sequelize": "^6.3.3"
   },
   "scripts": {
